Bug 184905 (grow) - Size of the panel change when panel-background.svg changed (usually it grow)
Summary: Size of the panel change when panel-background.svg changed (usually it grow)
Status: RESOLVED FIXED
Alias: grow
Product: plasma4
Classification: Plasma
Component: panel (show other bugs)
Version: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 186975 188739 191089 191379 194445 194938 195329 195958 196156 196386 198825 198837 199834 203087 203474 205801 205805 206741 207250 207448 207557 209169 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-19 09:15 UTC by Ivan Mironov
Modified: 2009-10-08 13:37 UTC (History)
43 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Screenshots (248.16 KB, image/png)
2009-02-19 09:16 UTC, Ivan Mironov
Details
Plasma config (2.55 KB, text/plain)
2009-02-19 09:17 UTC, Ivan Mironov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Mironov 2009-02-19 09:15:27 UTC
Version:            (using KDE 4.2.0)
Compiler:          gcc 4.3.3 
OS:                Linux
Installed from:    Gentoo Packages

When I switch on/off all desktop effects or individual effects separately, plasma panel becomes bigger.

Steps to reproduce:
1. Resize panel (to make less than the default).
2. Turn desktop effects off.
3. Turn desktop effects on.
4. Turn desktop effects off.
5. Turn desktop effects on.
...

Expected behaviour:
Panel should be the same size with and without desktop effects.
Comment 1 Ivan Mironov 2009-02-19 09:16:33 UTC
Created attachment 31461 [details]
Screenshots
Comment 2 Ivan Mironov 2009-02-19 09:17:39 UTC
Created attachment 31462 [details]
Plasma config
Comment 3 Ivan Mironov 2009-02-19 09:21:25 UTC
Now I use Qt 4.5rc1 with KDE 4.2, but as far as I remember the same problem with Qt 4.4.2.
Comment 4 Ivan Mironov 2009-03-06 07:37:10 UTC
The problem is still there after updating to Qt 4.5 and KDE 4.2.1.
Comment 5 David Goller 2009-03-11 16:27:03 UTC
i have the same problem (opensuse 11.1, kde 4.2.1, qt 4.5), but it also happens, when i change the plasma design.
Comment 6 Volkov Ivan 2009-04-06 23:52:11 UTC
Have the same problem (archlinux latest, kdemod 4.2.2, qt 4.5). It happens when i shitch desktop effects on and off, change plasma themes and switch between internal and external displays on my laptop.
Comment 7 Marco Martin 2009-05-06 21:57:55 UTC
*** Bug 191379 has been marked as a duplicate of this bug. ***
Comment 8 Kristjan Ugrin 2009-05-16 12:04:39 UTC
Same problem on kde 4.3 dev and qt 4.5.1.
This also happens when you change plasma theme - panels
loose their defined size (if they are smaller than default).
Comment 9 Salvatore 2009-05-16 12:21:04 UTC
i have the same problem (kubuntu 9.04, kde 4.2.3, qt 4.5),

Please, vote the bug for a fast confirmation.
Comment 10 Dario Andres 2009-05-16 15:12:51 UTC
*** Bug 191089 has been marked as a duplicate of this bug. ***
Comment 11 John Miller 2009-05-16 16:20:42 UTC
*** This bug has been confirmed by popular vote. ***
Comment 12 Leonidas Arvanitis 2009-05-27 11:58:03 UTC
I am experiencing the same bug on openSUSE 11.1 with KDE 4.2.3 from the KDE:42 Build Service repositories and Qt 4.5.1.
I just wanted to add some more information.

Things that don't affect this strange behaviour:
* Locking the widgets or leaving them unlocked.
* Whether compositing is initially enabled or disabled.

Notes:
* It affects all existing panels, even empty ones.
* The "final" size of each panel depends on its contents.
Comment 13 Marco Martin 2009-05-29 13:47:58 UTC
*** Bug 194445 has been marked as a duplicate of this bug. ***
Comment 14 charly ghislain 2009-05-29 18:06:59 UTC
from 194445:
This happen when restarting kwin manually.
This happen on an empty panel
This doesn't happen when the panel height is greater than default.
Comment 15 Kamil Neczaj 2009-06-02 15:11:58 UTC
I have similar problem: https://bugs.kde.org/show_bug.cgi?id=194938
Comment 16 Aaron J. Seigo 2009-06-02 18:46:19 UTC
*** Bug 194938 has been marked as a duplicate of this bug. ***
Comment 17 Kamil Neczaj 2009-06-02 21:48:24 UTC
I have same results, but the way to get them is another, so is it really a duplicate?
Comment 18 Dario Andres 2009-06-05 14:23:59 UTC
Is this related to bug 186975?
Comment 19 Aneurin Price 2009-06-05 14:59:01 UTC
*** Bug 195329 has been marked as a duplicate of this bug. ***
Comment 20 Thomas Lübking 2009-06-05 15:14:42 UTC
*** Bug 186975 has been marked as a duplicate of this bug. ***
Comment 21 Aaron J. Seigo 2009-06-11 01:47:21 UTC
*** Bug 195958 has been marked as a duplicate of this bug. ***
Comment 22 Dario Andres 2009-06-12 16:57:51 UTC
*** Bug 196156 has been marked as a duplicate of this bug. ***
Comment 23 Aaron J. Seigo 2009-06-13 21:07:54 UTC
*** Bug 196386 has been marked as a duplicate of this bug. ***
Comment 24 Aaron J. Seigo 2009-06-22 09:33:18 UTC
*** Bug 188739 has been marked as a duplicate of this bug. ***
Comment 25 Aaron J. Seigo 2009-07-05 08:42:59 UTC
*** Bug 198825 has been marked as a duplicate of this bug. ***
Comment 26 Aaron J. Seigo 2009-07-05 08:45:47 UTC
*** Bug 198837 has been marked as a duplicate of this bug. ***
Comment 27 Dylon 2009-07-11 08:07:07 UTC
Playing around with the panel a little, it seems only to expand until a specific amount of padding is between the top of the panel and the plasmoids it contains (with KRuler, I estimate about 8 pixels). When the panel is at least 37 pixels high (again, estimated with KRuler), the top padding remains the same, and the panel does not resize. However, when it's shorter, the amount of padding along the top decreases. Toggling compositing on and off causes it to enlarge until a padding width of 8 pixels is obtained. By enlarging the panel, the top padding doesn't increase after the panel has surpassed a certain width, however, it decreases as the panel's width decreases (past that magic point).

Is there a hard coded padding width that someone can change, or a setting in one of the configs that would be easy to modify? It doesn't look like it would be difficult to fix, but if the width is hard coded, someone with more experience with Qt than me will have to do it (my C++/Qt skills aren't that amazing yet).
Comment 28 Dario Andres 2009-07-14 19:23:29 UTC
*** Bug 199834 has been marked as a duplicate of this bug. ***
Comment 29 peterz 2009-07-17 16:44:33 UTC
Still present in 4.2.96 (https://launchpad.net/~kubuntu-ppa/+archive/backports).
Comment 30 humufr 2009-07-24 10:49:07 UTC
still present in 4.2.98
Comment 31 潘卫平 2009-08-04 03:35:58 UTC
SVN commit 1006608 by peterpan:

Don't change the size of panel when we change the plasma theme or enable/disable window effects.

BUG:184905



 M  +0 -17     panel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1006608
Comment 32 Aaron J. Seigo 2009-08-05 15:26:41 UTC
SVN commit 1007304 by aseigo:

backport SVN commit 1006608 by peterpan:

Don't change the size of panel when we change the plasma theme or enable/disable window effects.

CCBUG:184905


 M  +0 -17     panel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1007304
Comment 33 Dario Andres 2009-08-08 16:48:15 UTC
*** Bug 203087 has been marked as a duplicate of this bug. ***
Comment 34 Alberto Gonzalez 2009-09-02 00:19:01 UTC
I have installed KDE 4.3.1 and I still see this bug happen. Did the backport make it into this release?

By the way, bug #203474 is a dup of this bug and it's still open (and other user confirmed there it is still present in 4.3.1).

My easiest way to reproduce it is to make the panel small (about 30px heigh) and change the plasma theme (from Air to Aya and back).
Comment 35 Panagiotis Papadopoulos 2009-09-02 00:29:29 UTC
This is also reproducible with a recent KDE from trunk (compiled this morning)

To my surprise, after changing the plasma theme several times in a row, KWin died...

I'll do some tests about this issue tomorrow :-)
Comment 36 Salvatore 2009-09-02 00:32:13 UTC
I still see this bug in kde 4.3.1 (kubuntu)
Comment 37 Kristjan Ugrin 2009-09-02 00:34:28 UTC
Strange, kde 4.3.0 and I'm not able to confirm it. Will wait for 4.3.1 packages, maybe something happened there.

Indeed kwin dies after switching themes a bit.
Is is possible to restart it, I cannot open konsole or anything.
Comment 38 Nikola Kovacs 2009-09-02 10:11:33 UTC
Kubuntu's KDE 4.3.1 packages (Jaunty backports, probably also Karmic) do not have this fix.

I've uploaded a package with the patch to my ppa: https://launchpad.net/~nx/+archive/kdeppa
Comment 39 Kristjan Ugrin 2009-09-02 13:40:53 UTC
Just updated kde to 4.3.1 on opensuse - problem is back!
I can confirm it just by enabling / disabling effects.
Comment 40 Thomas Lübking 2009-09-02 13:57:13 UTC
apparently the fix has been reverted :-(
http://websvn.kde.org/?view=rev&revision=1015419
Comment 41 Dario Andres 2009-09-02 14:16:32 UTC
*** Bug 203474 has been marked as a duplicate of this bug. ***
Comment 42 Emilio Scalise 2009-09-02 17:25:22 UTC
So, why this commit was reverted?

Could anyone reopen the bug, as the issue is still here?
Comment 43 Kamil Neczaj 2009-09-04 13:37:32 UTC
confirm, it's still in kde 4.3.1
Comment 44 Dario Andres 2009-09-04 13:44:17 UTC
@Marco: can you take a look at this ? Thanks
Comment 45 Dario Andres 2009-09-08 14:31:11 UTC
*** Bug 206741 has been marked as a duplicate of this bug. ***
Comment 46 Jonathan Thomas 2009-09-08 21:09:01 UTC
*** Bug 205805 has been marked as a duplicate of this bug. ***
Comment 47 Daniel 2009-09-12 13:25:22 UTC
Bug 205383 probably is also a duplicate.
Comment 48 Fábio Firmo 2009-09-13 02:12:48 UTC
I can confirm this on kubuntu 4.3.1 backports (for 9.04), would be nice if it got fixed, because it's really annoying when I use my laptop, cause I switch compositing constantly to save battery.
Comment 49 FiNeX 2009-09-13 14:53:15 UTC
*** Bug 207250 has been marked as a duplicate of this bug. ***
Comment 50 Dario Andres 2009-09-16 16:10:03 UTC
*** Bug 207557 has been marked as a duplicate of this bug. ***
Comment 51 Dario Andres 2009-09-16 16:17:40 UTC
*** Bug 207448 has been marked as a duplicate of this bug. ***
Comment 52 Giulio Camuffo 2009-09-22 22:21:36 UTC
fixed in r1026902, /trunk/KDE/kdebase/workspace/plasma/desktop/containments/panel/panel.cpp
don't resize the panel on themeUpdated()
Comment 53 Volkov Ivan 2009-09-22 22:59:33 UTC
The latest revision in trunk is 1026738… Could you please give a link to r1026902?
Comment 54 Giulio Camuffo 2009-09-22 23:05:45 UTC
the websvn interface hasn't yet updated. anyway if you do
svn://anonsvn.kde.org/home/kde/trunk/KDE/kdebase/workspace/plasma/desktop/containments/panel 
you'll download r1026902 for panel.cpp
Comment 55 Giulio Camuffo 2009-09-22 23:07:34 UTC
sorry, r1026929
Comment 56 Volkov Ivan 2009-09-22 23:25:08 UTC
Thanks!
Comment 57 Andrey Borzenkov 2009-09-23 04:50:31 UTC
(In reply to comment #52)
> fixed in r1026902,
> /trunk/KDE/kdebase/workspace/plasma/desktop/containments/panel/panel.cpp
> don't resize the panel on themeUpdated()

Could you backport it (again) to 4.3? Thank you!
Comment 58 Giulio Camuffo 2009-09-23 10:52:21 UTC
SVN commit 1027000 by camuffo:

backport SVN commit r1026902

don't resize the panel on themeUpdated()

BUG: 184905


 M  +0 -32     panel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1027000
Comment 59 Christoph Feck 2009-09-30 11:41:35 UTC
*** Bug 205801 has been marked as a duplicate of this bug. ***
Comment 60 Dario Andres 2009-10-02 03:55:39 UTC
*** Bug 209169 has been marked as a duplicate of this bug. ***
Comment 61 Salvatore 2009-10-06 20:43:21 UTC
I still see this bug in kde 4.3.2 (karmic koala).
This bug is really annoying.
Comment 62 Kishore 2009-10-08 10:19:43 UTC
Here on Karmic Koala, the bug does appear to have been fixed.
Comment 63 Alberto Gonzalez 2009-10-08 12:46:31 UTC
Yes, in Arch Linux running 4.3.2 the problem is also fixed.

Thanks.
Comment 64 Leonidas Arvanitis 2009-10-08 13:08:12 UTC
I can confirm that this bug is fixed in Karmic Koala/KDE 4.3.2.

Installed version of kdebase-workspace is 4:4.3.2-0ubuntu1.

Thanks for fix + backport!
I had a lot of panels and this bug was killing me!
Comment 65 Salvatore 2009-10-08 13:37:15 UTC
After the last upgrade the bug does appear to have been fixed.
I'm sorry for the my last wrong report.