Don't change the size of panel when we change the plasma theme or enable/disable window effects.

BUG:184905


svn path=/trunk/KDE/kdebase/workspace/; revision=1006608